# AnimaStudio

./: .gitignore  AGENTS.md  CONVENTIONS.md  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
anima_core/: __init__.py  __main__.py.example  config.py.example  extensions.py  features.py  loader.py  module.yaml.example  node.py.example  outputs.py  rig.py  scene.py  serial_transport.py  sim.py  wire.py
anima_core/docs/: DESIGN.md.example
anima_core/tests/: test_extensions.py  test_features.py  test_loader.py  test_module_contract.py.example  test_outputs.py  test_rig.py  test_scene.py  test_serial_transport.py  test_sim.py  test_tracks.py  test_wire.py
anima_studio/: __init__.py  __main__.py.example  clips.py  config.py.example  extensions.py  features.py  loader.py  module.yaml.example  node.py.example  outputs.py  rig.py  scene.py  serial_transport.py  sim.py  tracks.py
anima_studio/docs/: DESIGN.md.example
anima_studio/tests/: test_clips.py  test_extensions.py  test_features.py  test_loader.py  test_module_contract.py.example  test_outputs.py  test_rig.py  test_scene.py  test_serial_transport.py  test_sim.py  test_tracks.py  test_wire.py
animacore/: __init__.py  __main__.py.example  bridge.py  config.py.example  dh.py  extensions.py  features.py  kinematics.py  loader.py  mates.py  module.yaml.example  node.py.example  outputs.py  rig.py  scene.py  serial_transport.py  serialize.py  sim.py
animacore/docs/: DESIGN.md.example
animacore/tests/: test_bridge.py  test_dh.py  test_extensions.py  test_features.py  test_kinematic_chain.py  test_kinematics.py  test_loader.py  test_mates.py  test_module_contract.py.example  test_object_states.py  test_outputs.py  test_part_rest_transform.py  test_rig.py  test_scene.py  test_serial_transport.py  test_serialize.py  test_sim.py  test_tracks.py  test_wire.py
app/: Package.swift  README.md  project.yml
app/AnimaStudio.xcodeproj/: project.pbxproj
app/App/: AnimaStudioApp.swift
app/App/Shaders/: ViewportSection.metal
app/AppUITests/: AnimaStudioAppUITests.swift
app/Config/: Shared.xcconfig
app/Scripts/: build-root-app.sh  embed-animacore-helper.sh
app/Sources/AnimaCoreClient/: AnimaCoreBridgeModels.swift  AnimaCoreClient.swift  AnimaCoreLaunchConfiguration.swift  AnimaCoreRigDocumentEditor.swift
app/Sources/AnimaDocument/: AnimaDocumentError.swift  AnimaDocumentStore.swift  DocumentAsset.swift  (+5 more)
dev/briefings/: 2026-07-14-bottango-parity.md  README.md  claude.md  codex.md
dev/labs/: .gitignore  README.md  build.sh
dev/labs/qtbench/: CMakeLists.txt  main.mm
docs/: index.html
examples/: README.md  geometry_mates_demo.character.anima  jp01_minimal.character.anima  pan_tilt_head.character.anima  patrol_and_greet.scene.anima  pick_and_wave.scene.anima  rc_car.character.anima  six_axis_arm.character.anima  six_axis_arm_dh.character.anima  walle_style.character.anima
firmware/: README.md
firmware/anima_firmware/: anima_firmware.ino  config.h  protocol.cpp  protocol.h  servo_backend.cpp  servo_backend.h
studio/: Package.swift  README.md
studio/AnimaStudio.xcodeproj/: project.pbxproj
studio/App/: AnimaStudioApp.swift
studio/Config/: Debug.xcconfig  Release.xcconfig
studio/Scripts/: build-root-app.sh
(+310 files in other folders)
