# AnimaCore — the Anima animation engine (Python runtime).
# The headless core the Mac app (app/, Swift) and the firmware author
# for; see dev/docs/roadmap/ for the .anima format + wire protocol
# contracts both implementations answer to.

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "animacore"
description = "AnimaCore — the open animation engine: mechanism rigs, mates/DOF, kinematics, show execution, and hardware wire protocol for AI characters and animatronic robots."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dynamic = ["version"]
dependencies = [
    "pyyaml>=6",
    "pyserial>=3.5",
    # "jaeger-os>=0.9,<0.10",  # pin once JaegerOS integration lands
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]

[tool.setuptools.dynamic]
version = {attr = "animacore.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["animacore*"]

[tool.pytest.ini_options]
testpaths = ["animacore/tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
